fix secondary button margin bottom to align with primary button

--- a/packages/components/button/_button.scss
+++ b/packages/components/button/_button.scss
@@ -117,7 +117,7 @@ $button-padding-left-right: nhsuk-spacing(3);
 /// Button variations
 
 .nhsuk-button--secondary {
-  @include nhsuk-responsive-margin(5, "bottom"); // [4] //
+  @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-border-width); // [4] //
 
   background-color: $nhsuk-secondary-button-color;
   border: $button-border-width solid $nhsuk-secondary-button-border-color;
@@ -147,7 +147,8 @@ $button-padding-left-right: nhsuk-spacing(3);
   }
 
   &:focus {
-    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size * 1.5); // s1
+    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size); // [4] //
+    
     background: $nhsuk-focus-color;
     border-color: $nhsuk-focus-color;
     border-bottom: 0;
@@ -165,7 +166,8 @@ $button-padding-left-right: nhsuk-spacing(3);
   }
 
   &:active {
-    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size * 1.5); // s1
+    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size); // [4] //
+
     background: $nhsuk-secondary-button-active-color;
     border-color: $nhsuk-secondary-button-border-color;
     border-bottom: $button-border-width solid;
@@ -187,7 +189,7 @@ $button-padding-left-right: nhsuk-spacing(3);
 }
 
 .nhsuk-button--secondary-white-background {
-  @include nhsuk-responsive-margin(5, "bottom"); // [4] //
+  @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-border-width); // [4] //
 
   background-color: $color_nhsuk-white;
   border: $button-border-width solid $nhsuk-secondary-button-border-color;
@@ -217,7 +219,8 @@ $button-padding-left-right: nhsuk-spacing(3);
   }
 
   &:focus {
-    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size * 1.5); // s1
+    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size); // [4] //
+
     background: $nhsuk-focus-color;
     border-color: $nhsuk-focus-color;
     border-bottom: 0;
@@ -235,7 +238,8 @@ $button-padding-left-right: nhsuk-spacing(3);
   }
 
   &:active {
-    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size * 1.5); // s1
+    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size); // [4] //
+
     background: $nhsuk-secondary-button-active-color;
     border-color: $nhsuk-secondary-button-border-color;
     border-bottom: $button-border-width solid;
